# Documentos_Rag

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
pages/: 1_💬_Chat.py  2_📂_Documents.py  3_🔍_Database.py  4_📜_History.py  5_⚙️_Settings.py  6_📊_Analytics.py
utils/: analytics.py  db_manager.py  rag_engine.py  styles.py
