[project]
name = "documentos-rag"
version = "0.1.0"
description = "Spectacular RAG App with Gemini & Ollama"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.32.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-google-genai>=0.0.9",
    "langchain-ollama>=0.0.1",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "sentence-transformers>=2.5.0",
    "accelerate>=0.26.0",
    "chromadb>=0.4.22",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.1",
    "watchdog>=4.0.0",
    "pandas>=2.2.0",
    "plotly>=5.18.0"
]
